--- a/layouts/404.html
+++ b/layouts/404.html
@@ -5,6 +5,7 @@
     <br><br>    
     <h1>404 - Page not found! 😱</h1>
     <img src="img/404.html/404.png">
+    ![Oppps!](/img/404.html/404.png).
     <p>  
         It looks like you're lost. No worries!
         <br>
