--- a/layouts/404.html
+++ b/layouts/404.html
@@ -4,8 +4,8 @@
   <div class="px-6 py-20 w-full lg:w-[580px] mx-auto prose dark:prose-invert h-fit prose-img:mx-auto">
     <br><br>    
     <h1>404 - Page not found! 😱</h1>
+    /img/404/404.png
     
-    ![Oppps](/img/404.html/404.png)
     <p>  
         It looks like you're lost. No worries!
         <br>
