--- a/layouts/404.html
+++ b/layouts/404.html
@@ -4,7 +4,10 @@
   <div class="px-6 py-20 w-full lg:w-[580px] mx-auto prose dark:prose-invert h-fit prose-img:mx-auto">
     <br><br>    
     <h1>404 - Page not found! 😱</h1>
-    /img/404/404.png
+    <figure>
+      <img src="404/404.png">
+      <figcaption>Ops! Error!</figcaption>
+    </figure>
     
     <p>  
         It looks like you're lost. No worries!
