--- a/layouts/404.html
+++ b/layouts/404.html
@@ -6,7 +6,7 @@
     <h1>404 - Page not found! 😱</h1>
     <br>
     <figure>
-      <img src="404/404.png">
+      <img src="/404/404.png">
       <figcaption>Ops! Error!</figcaption>
     </figure>
     
