--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,10 +2,10 @@
 
 <main class="h-screen overflow-y-auto">
   <figure>
-    <img src="/static/img/404/404.png">
+    <img src="/assets/images/404/404.png">
     <figcaption>Ops! Error!</figcaption>
   </figure>
-  
+
   <div class="px-6 py-20 w-full lg:w-[580px] mx-auto prose dark:prose-invert h-fit prose-img:mx-auto">
     <br><br>    
     <h1>404 - Page not found! 😱</h1>
