--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,7 @@
 
 <main class="h-screen overflow-y-auto">
   <figure>
-    <img src="/assets/images/404/404.png">
+    <img src="/static/404/404.png">
     <figcaption>Ops! Error!</figcaption>
   </figure>
 
