--- a/layouts/404.html
+++ b/layouts/404.html
@@ -4,7 +4,9 @@
   <div class="px-6 py-20 w-full lg:w-[580px] mx-auto prose dark:prose-invert h-fit prose-img:mx-auto">
     <br><br>    
     <h1>404 - Page not found! 😱</h1>
-    <img src= "/static/404/404.png">
+    
+    <img src="/static/404/404.png" alt="Error 404"/>
+
   
     <p>  
         It looks like you're lost. No worries!
