--- a/layouts/404.html
+++ b/layouts/404.html
@@ -5,7 +5,7 @@
     <br><br>    
     <h1>404 - Page not found! 😱</h1>
     
-    <img src="/static/404/404.png" alt="Error 404"/>
+    <img src="/static/img/404/404.png" alt="Error 404"/>
 
   
     <p>  
