--- a/layouts/404.html
+++ b/layouts/404.html
@@ -5,8 +5,8 @@
     <br><br>    
     <h1>404 - Page not found! 😱</h1>
     
-    <img src="/static/img/404/404.png" alt="Error 404"/>
-
+    <img src="/img/404/404.png" alt="Error 404"/>
+  
   
     <p>  
         It looks like you're lost. No worries!
